--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
         <div class="section-title">
           <h2>About me</h2> 
-          <p>Passionate about technology</p><br>
-          <p>Having completed a Master's in Cybersecurity from Camilo Jose Cela University x Deloitte x IMF and holding a degree in Bilingual Web Development. I have a keen interest in incident response, threat intelligence, social engineering attacks and Artificial Intelligence </p><br>
+          <p>Passionate about technology.</p><br>
+          <p>Having completed a Master's in Cybersecurity from Camilo Jose Cela University x Deloitte x IMF and holding a degree in Bilingual Web Development. I have a keen interest in incident response, threat intelligence, social engineering attacks and Artificial Intelligence. </p><br>
           <p>Currently working as a Cybersecurity analyst specialized in incident response, with a strong command of English and software development. Experience in detecting, containing, and analyzing critical situations in global security environments.</p>
         </div>
 
@@ -120,37 +120,37 @@
 
         <div class="row">
           <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <div class="icon"><i class="bi bi-briefcase" style="font-size: 35px !important;"></i></div>
             <h4 class="title"><a href="">Experience</a></h4>
             <p class="description">working under pressure</p>
         </div>
         <br>
         <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
+            <div class="icon"><i class="bi bi-brightness-high" style="font-size: 35px !important;"></i></div>
             <h4 class="title"><a href="">Strategic</a></h4>
             <p class="description">thinking, proactive, initiative, leadership</p>
         </div>
         <br>
         <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
+            <div class="icon"><i class="bi bi-binoculars" style="font-size: 35px !important;"></i></div>
             <h4 class="title"><a href="">Creative</a></h4>
-            <p class="description">resourceful and willing.</p>
+            <p class="description">resourceful and willing</p>
         </div>
         <br>
         <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <div class="icon"><i class="bi bi-bar-chart" style="font-size: 35px !important;"></i></div>
             <h4 class="title"><a href="">Analytical</a></h4>
             <p class="description">abilities, adaptation, and effective communication</p>
         </div>
         <br>
         <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
+            <div class="icon"><i class="bi bi-card-checklist" style="font-size: 35px !important;"></i></div>
             <h4 class="title"><a href="">Willing</a></h4>
-            <p class="description">to learn new technologies and face new challenges.</p>
+            <p class="description">to learn new technologies and face new challenges</p>
         </div>
         <br>
         <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon"><i class="bi bi-calendar4-week" style="font-size: 35px !important;"></i></div>
             <h4 class="title"><a href="">organizational</a></h4>
             <p class="description">skills, sense of time, and urgency</p>
         </div>
@@ -177,8 +177,8 @@
             <div class="resume-item">
               <h4>Cybersecurity analyst</h4> 
                 <h5><em>Cellnex Telecom - Madrid</em></h5> 
-                <u><p>November 2023 - Now</p></u>
-                <p>Cybersecurity Analyst in the global CSIRT - Computer Security Incident Response Team</p>
+                <u><p>November 2023 - Currently</p></u>
+                <p>Cybersecurity Analyst at the global CSIRT - Computer Security Incident Response Team</p>
                  <br>
                  <ul>
                   <li><p class="description">Security monitoring & Security incident handling</p></li>
@@ -193,8 +193,8 @@
             <div class="resume-item">
               <h4>Cybersecurity analyst</h4> 
                 <h5><em>Analistas Financieros Internacionales AFI - Madrid</em></h5> 
-                <u><p>April 2021 - November 2023</p></u>
-                <p>Analista Programador Junior Full Stack en el departamento de Servicios Tecnológicos Avanzados.</p>
+                <u><p>September 2022 - November 2023</p></u>
+                <p>Cybersecurity Analyst in the Advanced Technology Services department..</p>
                  <br>
                  <ul>
                   <li><p class="description">Threat detection and response. Proposal and development of efficient security measures.</p></li>
@@ -214,10 +214,10 @@
           
 
               <div class="resume-item">
-                <h4>Analista Programador | Desarrollador fullstack</h4> 
+                <h4>Fullstack software developer</h4> 
                   <h5><em>Analistas Financieros Internacionales AFI - Madrid</em></h5> 
-                  <u><p>Abril 2021 - Actualidad</p></u>
-                  <p>Analista Programador Junior Full Stack en el departamento de Servicios Tecnológicos Avanzados.</p>
+                  <u><p>Abril 2021 - November 2023</p></u>
+                  <p>Junior Full Stack Programmer Analyst in the Advanced Technology Services department.</p>
                    <br>
                    <ul>
                     <li><p class="description">Development and maintenance of web applications: Java, JavaScript, SQL.</p></li>
@@ -225,11 +225,11 @@
                     <li><p class="description">Documentation and reports: User manual, data model, system architecture, test plan (Microsoft Word, Excel, PowerPoint).</p></li>
                   </ul>
 
-                    <p><b>Tecnologías usadas:</b></p>
+                    <p><b>Technologies:</b></p>
                     <ul>
                       <li><p>FrontEnd: HTML, CSS, JavaScript, jQuery, AJAX.</p></li>
                       <li><p>BackEnd: Java, SQL, Python, Spring.</p></li>
-                      <li><p>Control de versiones: SVN, Git.</p></li>
+                      <li><p>Version Control: SVN, Git.</p></li>
                     </ul>
               </div>
 
@@ -242,7 +242,7 @@
               
               <div class="resume-item">
                 <h4>Assistant Manager</h4> 
-                <h5><em>Deleytax Auditors - Madrid</em></h5> 
+                <h5><em>Deleytax Auditores - Madrid</em></h5> 
                 <u><p>October 2018 - April 2019</p></u>
                 <p>Prepare, send, receive, and file documentation.</p>
               </div>
@@ -251,9 +251,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Máster en ciberseguridad </h4> 
+              <h4>Cybersecurity Master </h4> 
               <h5><em>IMF x UCJC x Deloitte - Madrid</em></h5> 
-              <u><p>noviembre 2022 - Junio 2023</p></u>
+              <u><p>November 2022 - June 2023</p></u>
               <br>
                 <ul>
                 <li><p>Ciberinteligencia</p>
@@ -277,13 +277,16 @@
                  <li><p>Ingeniería inversa</p>
                   <ul><li><p class="minip"> IDA, ghidra, pestudio </p> </li></ul>
                 </li>
+                <li><p>Thesis</p>
+                  <ul><li><p class="minip"> Banking fraud on social media: Withdrawal of funds from compromised bank accounts through TikTok. </p> </li></ul>
+                </li>
                 <ul>
             </div>
 
             <div class="resume-item">
               <h4>Cibersecurity Fundamentals</h4> 
                 <h5><em>edX online - Rochester Institute of technology </em></h5> 
-                <u><p>Enero 2022 - Junio 2022</p></u>
+                <u><p>January 2022 - June 2022</p></u>
                <br>
                  <ul>
                    <li><p>Cybersecurity Fundamentals.</p>
@@ -511,7 +514,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
                 <p>                  
-                  Speaker in talks for ESO (Compulsory Secondary Education) and high school students addressing cybersecurity topics related to social networks and online banking.    
+                  Speaker in talks for ESO (Compulsory Secondary Education) and high school students addressing cybersecurity topics related to social media platforms and online banking.    
                 </p>
                 <img src="assets/img/Voluntariado/ciberBanca.jpg" class="testimonial-img" alt="">
                 <h3 class="blanco">Helping: High school students</h3>
@@ -522,7 +525,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
                 <p>                  
-                  Speaker in talks for microfinance entities in Mexico on Cybersecurity topics.    
+                  Speaker in talks for microfinance entities in Mexico on Cybersecurity topics analyzing an incident and seen security measures available.    
                 </p>
                 <img src="assets/img/Voluntariado/Ciber.jpg" class="testimonial-img" alt="">
                 <h3 class="blanco">Helping: Mexican microfinance companies</h3>
