--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1 class="nombre">Jorge García-Arcicollar</h1>
     <br>
-     <div class="ima"> <p> I'm a/an <br><span class="typed" data-typed-items="cybersecurity analyst, incident responder, social engineering attacks investigator, threat intelligence analyst, security monitoring manager, digital forensic investigator, IT consultant, web security expert, vulnerability manager, software developer"></span></p></div>
+     <div class="ima"> <p> I'm a <br><span class="typed" data-typed-items="cybersecurity analyst, security incident responder, social engineering attacks investigator, threat intelligence analyst, security monitoring manager, digital forensic investigator, technology consultant, web security expert, vulnerability manager, software developer"></span></p></div>
     </div>
   </section><!-- End Hero -->
 
