--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Web:</strong> <a href="https://jorgearcicollar.github.io/"><span>jorgearcicollar.github.io</span></a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Madrid, España</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Madrid, Spain</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -736,7 +736,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Madrid, Madrid 28037</p>
+                <p>Madrid, Spain</p>
               </div>
         
               <div class="address">
