--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
                 <p>Cybersecurity Analyst at the global CSIRT - Computer Security Incident Response Team</p>
                  <br>
                  <ul>
-                  <li><p class="description">Security monitoring & Security incident handling</p></li>
+                  <li><p class="description">Security monitoring, SIEM</p></li>
+                  <li><p class="description">Security incident response. SOAR, XDR</p></li>
                   <li><p class="description">Threat hunting, threat intelligence</p></li>
                   <li><p class="description">Social engineering attacks investigation</p></li>
-                  <li><p class="description">Reporting, data visualization, documentation</p></li>
-                  <li><p class="description">Vulnerability management</p></li>
-                  <li><p class="description">Scripting</p></li>               
+                  <li><p class="description">Data access, analysis and visualization, reporting.</p></li>
+                  <li><p class="description">Vulnerability management</p></li>             
                  </ul>
             </div>
 
@@ -343,6 +343,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-deloitte">Deloitte</li>
               <li data-filter=".filter-linkedin">LinkedIn</li>
+              <li data-filter=".filter-pan">Palo Alto</li>
               <li data-filter=".filter-eccouncil">EC-Council</li>
               <li data-filter=".filter-google">Google</li>
               <li data-filter=".filter-udemy">Udemy</li>
@@ -450,6 +451,16 @@
                 <p>EC-Council</p>
               </div>
               <div class="texto-portfolio"> DFE | Digital Forensic Essentials </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-pan">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pan_logo.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <p>Palo Alto </p>
+              </div>
+              <div class="texto-portfolio"> Firewall configuration and management PAN EDU-210</div>
             </div>
           </div>
 
