--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
                 <p>                  
-                  Speaker in talks for microfinance entities in Mexico on Cybersecurity topics analyzing an incident and seen security measures available.    
+                  Speaker in talks for microfinance entities in Mexico on Cybersecurity topics analyzing an incident and security measures available.    
                 </p>
                 <img src="assets/img/Voluntariado/Ciber.jpg" class="testimonial-img" alt="">
                 <h3 class="blanco">Helping: Mexican microfinance companies</h3>
